Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp
@@ -209,10 +209,6 @@ static void scissorClip(GraphicsContext3D* context, const IntRect& rect)
 
 void TextureMapperGL::ClipStack::apply(GraphicsContext3D* context)
 {
-    if (!clipStateDirty)
-        return;
-    clipStateDirty = false;
-
     scissorClip(context, clipState.scissorBox);
     context->stencilOp(GraphicsContext3D::KEEP, GraphicsContext3D::KEEP, GraphicsContext3D::KEEP);
     context->stencilFunc(GraphicsContext3D::EQUAL, clipState.stencilIndex - 1, clipState.stencilIndex - 1);
@@ -220,6 +216,15 @@ void TextureMapperGL::ClipStack::apply(GraphicsContext3D* context)
         context->disable(GraphicsContext3D::STENCIL_TEST);
     else
         context->enable(GraphicsContext3D::STENCIL_TEST);
+}
+
+void TextureMapperGL::ClipStack::applyIfNeeded(GraphicsContext3D* context)
+{
+    if (!clipStateDirty)
+        return;
+
+    clipStateDirty = false;
+    apply(context);
 }
 
 
@@ -1030,7 +1035,7 @@ void BitmapTextureGL::clearIfNeeded()
         return;
 
     m_clipStack.reset(IntRect(IntPoint::zero(), m_textureSize));
-    m_clipStack.apply(m_context3D.get());
+    m_clipStack.applyIfNeeded(m_context3D.get());
     m_context3D->clearColor(0, 0, 0, 0);
     m_context3D->clear(GraphicsContext3D::COLOR_BUFFER_BIT);
     m_shouldClear = false;
@@ -1055,7 +1060,7 @@ void BitmapTextureGL::bind(TextureMapperGL* textureMapper)
     m_context3D->viewport(0, 0, m_textureSize.width(), m_textureSize.height());
     clearIfNeeded();
     textureMapper->data().projectionMatrix = createProjectionMatrix(m_textureSize, true /* mirrored */);
-    m_clipStack.apply(m_context3D.get());
+    m_clipStack.applyIfNeeded(m_context3D.get());
 }
 
 BitmapTextureGL::~BitmapTextureGL()
@@ -1124,7 +1129,7 @@ bool TextureMapperGL::beginScissorClip(const TransformationMatrix& modelViewMatr
         return false;
 
     clipStack().current().scissorBox.intersect(rect);
-    clipStack().apply(m_context3D.get());
+    clipStack().applyIfNeeded(m_context3D.get());
     return true;
 }
 
@@ -1176,13 +1181,13 @@ void TextureMapperGL::beginClip(const TransformationMatrix& modelViewMatrix, con
 
     // Increase stencilIndex and apply stencil testing.
     stencilIndex *= 2;
-    clipStack().apply(m_context3D.get());
+    clipStack().applyIfNeeded(m_context3D.get());
 }
 
 void TextureMapperGL::endClip()
 {
     clipStack().pop();
-    clipStack().apply(m_context3D.get());
+    clipStack().applyIfNeeded(m_context3D.get());
 }
 
 PassRefPtr<BitmapTexture> TextureMapperGL::createTexture()
